# photo_trap_clf

./: README.md  dino_phototrap.py
backend/: __main__.py  dino_phototrap.py  index.html  pyproject.toml  shell.nix
backend/static/: index.js  style.css
notebooks/: clf_vits.ipynb  visualization.ipynb
