[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["idevtier"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
aiohttp = "^3.8.5"
aiofiles = "^23.2.1"
numpy = "^1.26.0"
pandas = "^2.1.1"
scikit-image = "^0.21.0"
scikit-learn = "^1.3.1"
tqdm = "^4.66.1"
torch = { version = "1.12.1", source="torch"}
torchvision = { version = "0.13.1", source="torch"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
